fix bottom bar overflowing

--- a/website/static/stylesheets/index.css
+++ b/website/static/stylesheets/index.css
@@ -121,7 +121,6 @@ footer {
     border-top: 1px solid var(--fg);
     margin-top: 1em;
     padding: 0.5em;
-    width: 100%;
 }
 
 footer>* {
